<resources>
    <string name="app_name">Autidoría local de seguridad Querétaro</string>


    <string name="start1">¡Bienvenido!</string>
    <string name="start2">Aquí encontrará una serie de preguntas</string>
    <string name="start3">Este es un ejercicio anónimo e individual, siéntase en la libertad de contestar con la seguridad de que sólo usted conocerá las elecciones que haga para cada pregunta.</string>
    <string name="start4">Sus respuestas nos ayudarán a conocer más sobre su colonia y comunidad.</string>
    <string name="start5">Si tiene dudas, pregunte a alguno de los facilitadores.</string>
    <string name="start6">¡Agradecemos su participación!</string>

    <string name="finish1">Usted ha finalizado este cuestionario.</string>
    <string name="finish2">Favor de entregar la tableta electrónica a los facilitadores</string>
    <string name="finish3">¡Gracias por su participación!</string>
    <string name="finish4"></string>

    <string-array name="answers_array">
        <item>a) Opción 1</item>
        <item>b) Opción 2</item>
        <item>b) Opción 3</item>
        <item>b) Opción 4</item>
        <item>b) Opción 5</item>
        <item>b) Opción 6</item>
        <item>b) Opción 7</item>
        <item>b) Opción 8</item>
    </string-array>
</resources>
