<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_login"
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/unodc_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textColor="@android:color/holo_green_dark"
                android:text="@string/start1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@android:color/holo_green_dark"
                android:text="@string/start2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@android:color/holo_green_dark"
                android:text="@string/start3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@android:color/holo_green_dark"
                android:text="@string/start4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@android:color/holo_green_dark"
                android:text="@string/start5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@android:color/holo_green_dark"
                android:text="@string/start6"/>

            <Button
                android:id="@+id/start_btn"
                android:layout_below="@+id/pass_login_ui"
                android:layout_width="300dp"
                android:layout_height="65dp"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:text="Comenzar cuestionario"/>

            <Button
                android:id="@+id/sync_btn"
                android:layout_below="@+id/pass_login_ui"
                android:layout_width="300dp"
                android:layout_height="65dp"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:text="Sincronizar información"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>
