<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_login"
                android:layout_width="493dp"
                android:layout_height="113dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/unodc_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@android:color/holo_green_dark"
                android:text="@string/finish1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@android:color/holo_green_dark"
                android:text="@string/finish2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_green_dark"
                android:text="@string/finish3"/>



            <Button
                android:id="@+id/getBack_btn"
                android:layout_below="@+id/pass_login_ui"
                android:layout_width="269dp"
                android:layout_height="65dp"
                android:layout_marginTop="40dp"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:text="Regresar al inicio"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>
